--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "axios": "^0.19.0",
+    "jwt-decode": "^2.2.0",
     "patchwork-pattern": "^1.0.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +36,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxyProduction": "https://europe-west1-brewy-1.cloudfunctions.net/api",
+  "proxy": "http://localhost:5000/brewy-1/europe-west1/api"
 }
