--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "@material-ui/pickers": "^3.2.6",
     "axios": "^0.19.0",
+    "date-fns": "^2.4.1",
     "jwt-decode": "^2.2.0",
     "patchwork-pattern": "^1.0.0",
     "react": "^16.10.1",
