--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/pickers": "^3.2.6",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
     "date-fns": "^2.4.1",
     "jwt-decode": "^2.2.0",
     "patchwork-pattern": "^1.0.0",
     "react": "^16.10.1",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.1",
