--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
     "date-fns": "^2.4.1",
+    "firebase": "^7.2.1",
     "jwt-decode": "^2.2.0",
+    "material-ui-phone-number": "^2.2.2",
     "patchwork-pattern": "^1.0.0",
     "react": "^16.10.1",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.10.1",
-    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
-    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
