--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/pickers": "^3.2.6",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "date-fns": "^2.4.1",
     "firebase": "^7.2.1",
     "jwt-decode": "^2.2.0",
@@ -17,6 +18,7 @@
     "react": "^16.10.1",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.10.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
     "redux-thunk": "^2.3.0"
@@ -43,5 +45,13 @@
     ]
   },
   "proxyProduction": "https://europe-west1-brewy-1.cloudfunctions.net/api",
-  "proxy": "http://localhost:5000/brewy-1/europe-west1/api"
+  "proxy": "http://localhost:5000/brewy-1/europe-west1/api",
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0"
+  }
 }
