--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,23 +3,23 @@
   "name": "Brewy",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "brewy.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "brewy.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "brewy.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#232323",
+  "background_color": "#232323"
 }
