--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.10.1",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.10.1",
+    "react-firebase-file-uploader": "^2.4.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
