--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.4.1",
     "firebase": "^7.2.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
     "material-ui-phone-number": "^2.2.2",
     "patchwork-pattern": "^1.0.0",
     "react": "^16.10.1",
